# islands-game-bevy

./: Cargo.toml  README.md
src/: house.rs  island.rs  main.rs  person.rs  resource.rs  road.rs
